--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 700: '#4B2C71', // Core Purple
                 800: '#412562',
                 900: '#362052',
-                950: '#11091b', // Darker Depth
+                950: '#1a0f2e', // Lightened from #11091b for softer depth
                 gold: '#d4af37', 
                 gold_light: '#f3d267',
                 terminal: '#00ff41',
@@ -97,7 +97,7 @@
           --spotlight-y: 50%;
       }
       ::-webkit-scrollbar { width: 8px; }
-      ::-webkit-scrollbar-track { background: #11091b; }
+      ::-webkit-scrollbar-track { background: #1a0f2e; }
       ::-webkit-scrollbar-thumb {
         background: rgba(116, 69, 153, 0.4); 
         border-radius: 10px;
@@ -105,18 +105,18 @@
       ::-webkit-scrollbar-thumb:hover { background-color: #744599; }
       
       .glass {
-        background: rgba(54, 32, 82, 0.65);
-        backdrop-filter: blur(40px);
-        -webkit-backdrop-filter: blur(40px);
+        background: rgba(43, 25, 66, 0.25); /* Lightened and made more transparent */
+        backdrop-filter: blur(20px); /* Slightly reduced blur for clarity */
+        -webkit-backdrop-filter: blur(20px);
         border: 1px solid rgba(212, 175, 55, 0.15);
       }
       
       .flash-card {
           position: relative;
-          background: rgba(35, 21, 53, 0.5);
-          border: 1px solid rgba(212, 175, 55, 0.1);
-          backdrop-filter: blur(10px);
-          -webkit-backdrop-filter: blur(10px);
+          background: rgba(43, 25, 66, 0.3);
+          border: 1px solid rgba(212, 175, 55, 0.12);
+          backdrop-filter: blur(8px);
+          -webkit-backdrop-filter: blur(8px);
           transition: transform 0.4s cubic-bezier(0.22, 1, 0.36, 1), box-shadow 0.4s ease;
           transform-style: preserve-3d;
       }
@@ -149,7 +149,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: linear-gradient( to bottom, rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.05) 50% );
+        background: linear-gradient( to bottom, rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.03) 50% );
         background-size: 100% 4px;
         z-index: 2;
         pointer-events: none;
@@ -161,8 +161,8 @@
 
       @media (max-width: 640px) {
         .glass {
-          background: rgba(54, 32, 82, 0.85);
-          backdrop-filter: blur(20px);
+          background: rgba(43, 25, 66, 0.6);
+          backdrop-filter: blur(12px);
         }
       }
     </style>
