--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 400: '#a37ec1',
                 500: '#8b5db2',
                 600: '#744599',
-                700: '#4B2C71', // Core Purple
+                700: '#4B2C71', 
                 800: '#412562',
                 900: '#362052',
-                950: '#1a0f2e', // Lightened from #11091b for softer depth
+                950: '#1d1135', // Lightened from #1a0f2e for a softer, more vibrant background
                 gold: '#d4af37', 
                 gold_light: '#f3d267',
                 terminal: '#00ff41',
@@ -97,38 +97,40 @@
           --spotlight-y: 50%;
       }
       ::-webkit-scrollbar { width: 8px; }
-      ::-webkit-scrollbar-track { background: #1a0f2e; }
+      ::-webkit-scrollbar-track { background: #1d1135; }
       ::-webkit-scrollbar-thumb {
-        background: rgba(116, 69, 153, 0.4); 
+        background: rgba(212, 175, 55, 0.2); 
         border-radius: 10px;
       }
-      ::-webkit-scrollbar-thumb:hover { background-color: #744599; }
+      ::-webkit-scrollbar-thumb:hover { background-color: rgba(212, 175, 55, 0.4); }
       
       .glass {
-        background: rgba(43, 25, 66, 0.25); /* Lightened and made more transparent */
-        backdrop-filter: blur(20px); /* Slightly reduced blur for clarity */
-        -webkit-backdrop-filter: blur(20px);
-        border: 1px solid rgba(212, 175, 55, 0.15);
+        background: rgba(43, 25, 66, 0.2); /* Even lighter for background image visibility */
+        backdrop-filter: blur(15px);
+        -webkit-backdrop-filter: blur(15px);
+        border: 1px solid rgba(212, 175, 55, 0.1);
       }
       
       .flash-card {
           position: relative;
-          background: rgba(43, 25, 66, 0.3);
-          border: 1px solid rgba(212, 175, 55, 0.12);
-          backdrop-filter: blur(8px);
-          -webkit-backdrop-filter: blur(8px);
-          transition: transform 0.4s cubic-bezier(0.22, 1, 0.36, 1), box-shadow 0.4s ease;
+          background: rgba(43, 25, 66, 0.25);
+          border: 1px solid rgba(212, 175, 55, 0.1);
+          backdrop-filter: blur(10px);
+          -webkit-backdrop-filter: blur(10px);
+          transition: all 0.4s cubic-bezier(0.22, 1, 0.36, 1);
           transform-style: preserve-3d;
       }
       .flash-card:hover {
-          box-shadow: 0 40px 80px -20px rgba(0,0,0,0.5);
+          background: rgba(43, 25, 66, 0.35);
+          box-shadow: 0 40px 80px -20px rgba(0,0,0,0.6);
+          border-color: rgba(212, 175, 55, 0.3);
       }
       .flash-card::before {
           content: '';
           position: absolute;
           inset: 0;
           border-radius: inherit;
-          background: radial-gradient(400px circle at var(--spotlight-x) var(--spotlight-y), rgba(212, 175, 55, 0.1), transparent 100%);
+          background: radial-gradient(400px circle at var(--spotlight-x) var(--spotlight-y), rgba(212, 175, 55, 0.08), transparent 100%);
           opacity: 0;
           transition: opacity 0.3s ease;
           pointer-events: none;
@@ -140,7 +142,7 @@
       .terminal-text {
         font-family: 'Fira Code', monospace;
         color: #d4af37;
-        text-shadow: 0 0 5px rgba(212, 175, 55, 0.5);
+        text-shadow: 0 0 8px rgba(212, 175, 55, 0.5);
       }
 
       .scanline-overlay {
@@ -149,7 +151,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: linear-gradient( to bottom, rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.03) 50% );
+        background: linear-gradient( to bottom, rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.02) 50% );
         background-size: 100% 4px;
         z-index: 2;
         pointer-events: none;
@@ -159,10 +161,19 @@
         text-shadow: 0 0 15px rgba(212, 175, 55, 0.4);
       }
 
-      @media (max-width: 640px) {
+      .custom-scrollbar::-webkit-scrollbar {
+        width: 4px;
+        height: 4px;
+      }
+      .custom-scrollbar::-webkit-scrollbar-thumb {
+        background: rgba(212, 175, 55, 0.2);
+        border-radius: 10px;
+      }
+
+      @media (max-width: 1024px) {
         .glass {
-          background: rgba(43, 25, 66, 0.6);
           backdrop-filter: blur(12px);
+          background: rgba(43, 25, 66, 0.4);
         }
       }
     </style>
