feat: Introduce new UI elements and AI model configuration
This commit enhances the application's user interface and AI capabilities. A new 'pearl' color variant has been added to the theme. The AI service has been updated to configure the 'gemini-3-pro-preview' model for institutional-grade analysis and 'gemini-2.5-flash-preview-tts' for speech generation, along with optimized thinking budget for critical tasks.

Additionally, a new "ExplainabilityNode" component has been introduced within the InvestmentAnalyzer, providing transparency into the AI's reasoning process. UI form elements have been refined for a more polished user experience, and the BusinessIntelligence component has been updated to include new icons and remove unused state variables.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 gold: 'var(--color-brand-gold)', 
                 gold_light: 'var(--color-brand-gold_light)',
                 terminal: 'var(--color-brand-terminal)',
+                pearl: 'var(--color-brand-pearl)',
               }
             },
             animation: {
@@ -108,6 +109,7 @@
           --color-brand-gold: #d4af37;
           --color-brand-gold_light: #f3d267;
           --color-brand-terminal: #00ff41;
+          --color-brand-pearl: #fcfdfd;
 
           /* Default Typography */
           --font-sans: 'Inter';
