--- a/index.html
+++ b/index.html
@@ -136,31 +136,61 @@
       }
       
       .flash-card {
-          position: relative;
-          background: rgba(43, 25, 66, 0.25);
-          border: 1px solid rgba(212, 175, 55, 0.1);
-          backdrop-filter: blur(10px);
-          -webkit-backdrop-filter: blur(10px);
-          transition: all 0.4s cubic-bezier(0.22, 1, 0.36, 1);
-          transform-style: preserve-3d;
+        background-color: transparent;
+        perspective: 1000px;
+        transition: transform 0.4s cubic-bezier(0.22, 1, 0.36, 1);
       }
       .flash-card:hover {
-          background: rgba(43, 25, 66, 0.35);
-          box-shadow: 0 40px 80px -20px rgba(0,0,0,0.6);
-          border-color: rgba(212, 175, 55, 0.3);
+        transform: translateY(-10px); /* Add a lift effect on hover */
       }
-      .flash-card::before {
+      .card-inner {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        transition: transform 0.8s cubic-bezier(0.19, 1, 0.22, 1);
+        transform-style: preserve-3d;
+      }
+      .flash-card:hover .card-inner {
+        transform: rotateY(180deg);
+      }
+      .card-front, .card-back {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+        background: var(--color-brand-pearl);
+        border: 1px solid var(--color-brand-200);
+        border-radius: inherit;
+        display: flex;
+        flex-direction: column;
+        transition: box-shadow 0.4s, border-color 0.4s;
+        position: relative; /* For shine pseudo-element */
+        overflow: hidden;   /* To contain the shine */
+      }
+      .flash-card:hover .card-front, .flash-card:hover .card-back {
+        box-shadow: 0 35px 60px -15px rgba(29, 17, 53, 0.3); /* Enhanced shadow */
+        border-color: var(--color-brand-400);
+      }
+      .card-back {
+        transform: rotateY(180deg);
+      }
+      /* New Shine effect */
+      .card-front::before, .card-back::before {
           content: '';
           position: absolute;
-          inset: 0;
-          border-radius: inherit;
-          background: radial-gradient(400px circle at var(--spotlight-x) var(--spotlight-y), rgba(212, 175, 55, 0.08), transparent 100%);
-          opacity: 0;
-          transition: opacity 0.3s ease;
-          pointer-events: none;
+          top: 0;
+          left: -85%;
+          width: 60%;
+          height: 100%;
+          background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.25) 50%, rgba(255, 255, 255, 0) 100%);
+          transform: skewX(-25deg);
+          transition: left 0.8s cubic-bezier(0.19, 1, 0.22, 1);
+          z-index: 1; /* Ensure shine is on top of content */
       }
-      .flash-card:hover::before {
-          opacity: 1;
+      .flash-card:hover .card-front::before,
+      .flash-card:hover .card-back::before {
+          left: 125%;
       }
 
       .terminal-text {
