--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               },
               'blink-caret': {
                 'from, to': { borderColor: 'transparent' },
-                '50%': { borderColor: 'rgba(212, 175, 55, 0.75)' }
+                '50%': { borderColor: 'rgba(46, 139, 87, 0.75)' }
               },
               scanline: {
                 '0%': { transform: 'translateY(-100%)' },
@@ -95,21 +95,21 @@
     <style>
       :root {
           /* Default Theme Colors */
-          --color-brand-50: #f4eff7;
-          --color-brand-100: #e8dff0;
-          --color-brand-200: #d1bfe0;
-          --color-brand-300: #ba9ed1;
-          --color-brand-400: #a37ec1;
-          --color-brand-500: #8b5db2;
-          --color-brand-600: #744599;
-          --color-brand-700: #4B2C71;
-          --color-brand-800: #412562;
-          --color-brand-900: #362052;
-          --color-brand-950: #1d1135;
-          --color-brand-gold: #d4af37;
-          --color-brand-gold_light: #f3d267;
-          --color-brand-terminal: #00ff41;
-          --color-brand-pearl: #fcfdfd;
+          --color-brand-50: #F5FAFF;
+          --color-brand-100: #E6F1FF;
+          --color-brand-200: #CCD6F6;
+          --color-brand-300: #A8B2D1;
+          --color-brand-400: #8892B0;
+          --color-brand-500: #485A78;
+          --color-brand-600: #304566;
+          --color-brand-700: #233554;
+          --color-brand-800: #172A45;
+          --color-brand-900: #112240;
+          --color-brand-950: #0A192F;
+          --color-brand-gold: #2E8B57;
+          --color-brand-gold_light: #3CB371;
+          --color-brand-terminal: #64FFDA;
+          --color-brand-pearl: #1E3A3A;
 
           /* Default Typography */
           --font-sans: 'Inter';
@@ -123,16 +123,16 @@
       ::-webkit-scrollbar { width: 8px; }
       ::-webkit-scrollbar-track { background: var(--color-brand-950); }
       ::-webkit-scrollbar-thumb {
-        background: rgba(212, 175, 55, 0.2); 
+        background: rgba(46, 139, 87, 0.2); 
         border-radius: 10px;
       }
-      ::-webkit-scrollbar-thumb:hover { background-color: rgba(212, 175, 55, 0.4); }
+      ::-webkit-scrollbar-thumb:hover { background-color: rgba(46, 139, 87, 0.4); }
       
       .glass {
-        background: rgba(43, 25, 66, 0.2);
+        background: rgba(17, 34, 64, 0.2);
         backdrop-filter: blur(15px);
         -webkit-backdrop-filter: blur(15px);
-        border: 1px solid rgba(212, 175, 55, 0.1);
+        border: 1px solid rgba(46, 139, 87, 0.1);
       }
       
       .flash-card {
@@ -164,7 +164,7 @@
         transition: box-shadow 0.4s, border-color 0.4s;
       }
       .flash-card:hover .card-front, .flash-card:hover .card-back {
-        box-shadow: 0 25px 50px -12px rgba(29, 17, 53, 0.25);
+        box-shadow: 0 25px 50px -12px rgba(10, 25, 47, 0.25);
         border-color: var(--color-brand-400);
       }
       .card-back {
@@ -174,7 +174,7 @@
       .terminal-text {
         font-family: var(--font-mono), monospace;
         color: var(--color-brand-gold);
-        text-shadow: 0 0 8px rgba(212, 175, 55, 0.5);
+        text-shadow: 0 0 8px rgba(46, 139, 87, 0.5);
       }
 
       .scanline-overlay {
@@ -190,7 +190,7 @@
       }
 
       .text-glow {
-        text-shadow: 0 0 15px rgba(212, 175, 55, 0.4);
+        text-shadow: 0 0 15px rgba(46, 139, 87, 0.4);
       }
 
       .custom-scrollbar::-webkit-scrollbar {
@@ -198,14 +198,14 @@
         height: 4px;
       }
       .custom-scrollbar::-webkit-scrollbar-thumb {
-        background: rgba(212, 175, 55, 0.2);
+        background: rgba(46, 139, 87, 0.2);
         border-radius: 10px;
       }
 
       @media (max-width: 1024px) {
         .glass {
           backdrop-filter: blur(12px);
-          background: rgba(43, 25, 66, 0.4);
+          background: rgba(17, 34, 64, 0.4);
         }
       }
     </style>
