feat(admin): Add return to main site link and adjust colors
Adds a link to return to the main site from the admin login page.
Also, slightly darkens the `brand-950` color for better contrast.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           --color-brand-700: #233554;
           --color-brand-800: #172A45;
           --color-brand-900: #112240;
-          --color-brand-950: #0A192F;
+          --color-brand-950: #081424;
           --color-brand-gold: #2E8B57;
           --color-brand-gold_light: #3CB371;
           --color-brand-terminal: #64FFDA;
