--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               },
               'blink-caret': {
                 'from, to': { borderColor: 'transparent' },
-                '50%': { borderColor: 'rgba(46, 139, 87, 0.75)' }
+                '50%': { borderColor: 'rgba(0, 200, 83, 0.75)' }
               },
               scanline: {
                 '0%': { transform: 'translateY(-100%)' },
@@ -106,8 +106,8 @@
           --color-brand-800: #172A45;
           --color-brand-900: #112240;
           --color-brand-950: #081424;
-          --color-brand-gold: #2E8B57;
-          --color-brand-gold_light: #3CB371;
+          --color-brand-gold: #00C853;
+          --color-brand-gold_light: #69F0AE;
           --color-brand-terminal: #64FFDA;
           --color-brand-pearl: #1E3A3A;
 
@@ -123,16 +123,16 @@
       ::-webkit-scrollbar { width: 8px; }
       ::-webkit-scrollbar-track { background: var(--color-brand-950); }
       ::-webkit-scrollbar-thumb {
-        background: rgba(46, 139, 87, 0.2); 
+        background: rgba(0, 200, 83, 0.2); 
         border-radius: 10px;
       }
-      ::-webkit-scrollbar-thumb:hover { background-color: rgba(46, 139, 87, 0.4); }
+      ::-webkit-scrollbar-thumb:hover { background-color: rgba(0, 200, 83, 0.4); }
       
       .glass {
         background: rgba(17, 34, 64, 0.2);
         backdrop-filter: blur(15px);
         -webkit-backdrop-filter: blur(15px);
-        border: 1px solid rgba(46, 139, 87, 0.1);
+        border: 1px solid rgba(0, 200, 83, 0.1);
       }
       
       .flash-card {
@@ -174,7 +174,7 @@
       .terminal-text {
         font-family: var(--font-mono), monospace;
         color: var(--color-brand-gold);
-        text-shadow: 0 0 8px rgba(46, 139, 87, 0.5);
+        text-shadow: 0 0 8px rgba(0, 200, 83, 0.5);
       }
 
       .scanline-overlay {
@@ -190,7 +190,7 @@
       }
 
       .text-glow {
-        text-shadow: 0 0 15px rgba(46, 139, 87, 0.4);
+        text-shadow: 0 0 15px rgba(0, 200, 83, 0.4);
       }
 
       .custom-scrollbar::-webkit-scrollbar {
@@ -198,7 +198,7 @@
         height: 4px;
       }
       .custom-scrollbar::-webkit-scrollbar-thumb {
-        background: rgba(46, 139, 87, 0.2);
+        background: rgba(0, 200, 83, 0.2);
         border-radius: 10px;
       }
 
